syntax = "proto3";

package account;

service PublicApi {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc SignIn (SignInRequest) returns (SignInResponse);
}

message SignUpRequest {
    string email = 1;
    string password = 2;
    string username = 3;
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignUpResponse {
    Account account = 1;
}

message SignInResponse {
    Account account = 1;
}

message Account {
    uint32 id = 1;
    string email = 2;
    string username = 3;
    string token = 4;
}
